--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,40 @@
 asgiref==3.6.0
+astroid==2.14.1
+coverage==7.2.7
+crispy-bootstrap5==0.7
+defusedxml==0.7.1
+diff-match-patch==20230430
+dill==0.3.6
 dj-database-url==1.2.0
 Django==4.1.6
+django-crispy-forms==2.0
+django-import-export==3.3.5
+djangorestframework==3.14.0
+drf-extra-fields==3.4.1
+et-xmlfile==1.1.0
 gunicorn==20.1.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+MarkupPy==1.14
+mccabe==0.7.0
+odfpy==1.4.1
+openpyxl==3.1.2
+Pillow==9.4.0
+platformdirs==3.0.0
 psycopg2-binary==2.9.5
-pytz==2022.7.1
-sqlparse==0.4.3
-whitenoise==6.3.0
-coverage==7.2.7
+pylint==2.16.1
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0.1
 six==1.16.0
+sqlparse==0.4.3
+tablib==3.5.0
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.4.0
+whitenoise==6.3.0
+wrapt==1.14.1
+xlrd==2.0.1
+xlwt==1.3.0
