--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ django-import-export==3.3.5
 djangorestframework==3.14.0
 drf-extra-fields==3.4.1
 et-xmlfile==1.1.0
+factory-boy==3.3.0
+Faker==22.2.0
 gunicorn==20.1.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
