--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ dill==0.3.6
 dj-database-url==1.2.0
 Django==4.1.6
 django-crispy-forms==2.0
+django-debug-toolbar==4.2.0
 django-import-export==3.3.5
 djangorestframework==3.14.0
 drf-extra-fields==3.4.1
 et-xmlfile==1.1.0
 factory-boy==3.3.0
 Faker==22.2.0
+flake8==7.0.0
 gunicorn==20.1.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
@@ -24,6 +26,8 @@ openpyxl==3.1.2
 Pillow==9.4.0
 platformdirs==3.0.0
 psycopg2-binary==2.9.5
+pycodestyle==2.11.1
+pyflakes==3.2.0
 pylint==2.16.1
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
