--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
 astroid==2.14.1
+boto3==1.34.140
+botocore==1.34.140
 coverage==7.2.7
 crispy-bootstrap5==0.7
 defusedxml==0.7.1
@@ -10,6 +12,7 @@ Django==4.1.6
 django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 django-import-export==3.3.5
+django-storages==1.14.3
 djangorestframework==3.14.0
 drf-extra-fields==3.4.1
 et-xmlfile==1.1.0
@@ -18,12 +21,13 @@ Faker==22.2.0
 flake8==7.0.0
 gunicorn==20.1.0
 isort==5.12.0
+jmespath==1.0.1
 lazy-object-proxy==1.9.0
 MarkupPy==1.14
 mccabe==0.7.0
 odfpy==1.4.1
 openpyxl==3.1.2
-Pillow==10.3.0
+pillow==10.3.0
 platformdirs==3.0.0
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
@@ -34,12 +38,15 @@ pylint-plugin-utils==0.7
 python-dateutil==2.8.2
 pytz==2022.7.1
 PyYAML==6.0.1
+s3transfer==0.10.2
+setuptools==69.5.1
 six==1.16.0
 sqlparse==0.4.3
 tablib==3.5.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.4.0
+urllib3==2.2.2
 whitenoise==6.3.0
 wrapt==1.14.1
 xlrd==2.0.1
