--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+amazon-textract-caller==0.2.4
+amazon-textract-response-parser==1.0.3
+amazon-textract-textractor==1.8.2
 asgiref==3.6.0
 astroid==2.14.1
 boto3==1.34.140
@@ -15,6 +18,7 @@ django-import-export==3.3.5
 django-storages==1.14.3
 djangorestframework==3.14.0
 drf-extra-fields==3.4.1
+editdistance==0.8.1
 et-xmlfile==1.1.0
 factory-boy==3.3.0
 Faker==22.2.0
@@ -24,9 +28,13 @@ isort==5.12.0
 jmespath==1.0.1
 lazy-object-proxy==1.9.0
 MarkupPy==1.14
+marshmallow==3.21.3
 mccabe==0.7.0
+numpy==2.0.0
 odfpy==1.4.1
 openpyxl==3.1.2
+packaging==24.1
+pandas==2.2.2
 pillow==10.3.0
 platformdirs==3.0.0
 psycopg2-binary==2.9.9
@@ -43,11 +51,14 @@ setuptools==69.5.1
 six==1.16.0
 sqlparse==0.4.3
 tablib==3.5.0
+tabulate==0.9.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.4.0
+tzdata==2024.1
 urllib3==2.2.2
 whitenoise==6.3.0
 wrapt==1.14.1
 xlrd==2.0.1
+XlsxWriter==3.2.0
 xlwt==1.3.0
