--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 amazon-textract-caller==0.2.4
 amazon-textract-response-parser==1.0.3
 amazon-textract-textractor==1.8.2
-asgiref==3.6.0
+asgiref==3.8.1
 astroid==2.14.1
 boto3==1.34.140
 botocore==1.34.140
@@ -11,7 +11,8 @@ defusedxml==0.7.1
 diff-match-patch==20230430
 dill==0.3.6
 dj-database-url==1.2.0
-Django==4.1.6
+Django==5.1.4
+django-cors-headers==4.6.0
 django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 django-import-export==3.3.5
