--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 amazon-textract-caller==0.2.4
 amazon-textract-response-parser==1.0.3
 amazon-textract-textractor==1.8.2
+amqp==5.3.1
 asgiref==3.8.1
 astroid==2.14.1
+billiard==4.2.1
 boto3==1.34.140
 botocore==1.34.140
+celery==5.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 coverage==7.2.7
 crispy-bootstrap5==0.7
 defusedxml==0.7.1
@@ -27,6 +34,7 @@ flake8==7.0.0
 gunicorn==20.1.0
 isort==5.12.0
 jmespath==1.0.1
+kombu==5.4.2
 lazy-object-proxy==1.9.0
 MarkupPy==1.14
 marshmallow==3.21.3
@@ -38,6 +46,7 @@ packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
 platformdirs==3.0.0
+prompt_toolkit==3.0.48
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
@@ -47,6 +56,7 @@ pylint-plugin-utils==0.7
 python-dateutil==2.8.2
 pytz==2022.7.1
 PyYAML==6.0.1
+redis==5.2.1
 s3transfer==0.10.2
 setuptools==69.5.1
 six==1.16.0
@@ -58,6 +68,8 @@ tomlkit==0.11.6
 typing_extensions==4.4.0
 tzdata==2024.1
 urllib3==2.2.2
+vine==5.1.0
+wcwidth==0.2.13
 whitenoise==6.3.0
 wrapt==1.14.1
 xlrd==2.0.1
