--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 django-import-export==3.3.5
 django-storages==1.14.3
+django-stubs==5.1.3
+django-stubs-ext==5.1.3
 djangorestframework==3.14.0
 drf-extra-fields==3.4.1
 editdistance==0.8.1
@@ -39,6 +41,8 @@ lazy-object-proxy==1.9.0
 MarkupPy==1.14
 marshmallow==3.21.3
 mccabe==0.7.0
+mypy==1.15.0
+mypy_extensions==1.1.0
 numpy==2.0.0
 odfpy==1.4.1
 openpyxl==3.1.2
@@ -65,7 +69,9 @@ tablib==3.5.0
 tabulate==0.9.0
 tomli==2.0.1
 tomlkit==0.11.6
-typing_extensions==4.4.0
+types-python-dateutil==2.9.0.20241206
+types-PyYAML==6.0.12.20241230
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 vine==5.1.0
